deploy readying